[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Entities/sigma.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Particules/sigma/sigma_0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Particules/sigma/sigma_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Particules/sigma/sigma_2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Particules/sigma/sigma_3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Particules/sigma/sigma_4.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 1.00764

[sub_resource type="CircleShape2D" id=3]
radius = 2.23678

[sub_resource type="CircleShape2D" id=4]
radius = 244.939

[node name="sigma" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="coll" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 524293

[node name="CollisionShape2D" type="CollisionShape2D" parent="coll"]
shape = SubResource( 3 )

[node name="aire" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="aire"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="Stop" type="Timer" parent="."]
[connection signal="body_entered" from="coll" to="." method="_on_coll_body_entered"]
[connection signal="body_entered" from="aire" to="." method="_on_aire_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Stop" to="." method="_on_Stop_timeout"]
